# onboarding-epoch-v-competition

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cv.py  pyproject.toml  ruff.toml  submit.py  train.py
.github/: dependabot.yml
.github/workflows/: unit-tests.yaml
conf/: cv.yaml  submit.yaml  train.yaml
conf/model/: run.yaml
src/config/: cv_config.py  submit_config.py  train_config.py  wandb_config.py
src/data/: __init__.py  xdata.py  ydata.py
src/modules/training/: example_training_block.py  verbose_training_block.py
src/modules/training/models/: augmented_model.py  ensemble_model.py  mlp.py  pretrained_model.py
src/modules/transformation/x/: add_constant.py  get_first_10_pixels.py  get_images.py  prepare_images.py  remove_back.py
src/modules/transformation/y/: __init__.py  get_labels.py  one_hot.py
src/scoring/: accuracy.py  rocauc.py  scorer.py
src/setup/: setup_data.py  setup_pipeline.py  setup_runtime_args.py  setup_wandb.py
src/utils/: to_submission_format.py
submission/: example_submission.csv  example_submission.py  manage_datasets.py
tests/modules/transformation/x/: test_add_constant.py
tests/modules/transformation/y/: test_one_hot.py
