[project]
name = "onboarding-epoch-v-competition"
version = "0.0.1"
description = "Team Epoch's solution to the Pokémon Type Classification Competition."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "scikit-learn>=1.4.2",
    "tqdm>=4.60.0",
    "epochalyst>=0.3.2",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",
    "torch==2.2.2+cu121",
    "torchvision==0.17.2+cu121",
    "torchaudio==2.2.2+cu121",
    "dask>=2024.4.0",
    "dask-expr>=1.0.12",
    "typing_extensions>=4.9.0",
    "annotated-types>=0.6.0",
    "hydra-core>=1.3.2",
    "wandb>=0.16.2",
    "randomname>=0.2.1",
    "coloredlogs>=15.0.1",
    "imageio>=2.34.1",
    "pillow>=10.3.0",
    "opencv-python>=4.9.0.80",
    "timm>=1.0.3",
]

[project.scripts]
train = "train:run_train"
cv = "cv:run_cv"
submit = "submit:run_submit"

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    "pre-commit>=3.7.0",
    "notebook>=7.0.6",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "kaggle>=1.6.12",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"

[tool.rye.scripts]
download-models = { call = "submission.download_models:download_models" }
manage-datasets = { call = "submission.manage_datasets:manage_datasets" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "external", "cv", "submit", "train"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
